--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,9 @@
       "role": "Developer"
     }
   ],
-  "minimum-stability": "stable"
+  "minimum-stability": "stable",
+  "require": {
+    "paquettg/php-html-parser": "^3.1",
+    "illuminate/collections": "^8.12"
+  }
 }
