--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
       "role": "Developer"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "paquettg/php-html-parser": "^3.1",
     "illuminate/collections": "^8.12"
