--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
       "role": "Developer"
     }
   ],
-  "minimum-stability": "dev",
   "require": {
     "paquettg/php-html-parser": "^3.1",
     "illuminate/collections": "^8.12"
-  }
+  },
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
