--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,5 @@
     "paquettg/php-html-parser": "^3.1",
     "illuminate/collections": "^8.12"
   },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  "minimum-stability": "dev"
 }
