--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
   ],
   "require": {
     "paquettg/php-html-parser": "^3.1",
-    "illuminate/collections": "^8.12"
+    "ext-json": "*"
   },
   "minimum-stability": "dev"
 }
